// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Encapsulation Header Building Utility Builds Correct Encapsulation Buffer 1`] = `
Object {
  "data": Array [
    101,
    0,
    4,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Encapsulation Header Parsing Utility Builds Correct Encapsulation Buffer 1`] = `
Object {
  "command": "SendRRData",
  "commandCode": 111,
  "data": Object {
    "data": Array [
      1,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "length": 4,
  "options": 0,
  "session": 98705,
  "status": "SUCCESS",
  "statusCode": 0,
}
`;

exports[`Encapsulation Test Encapsulation Generator Functions Register Session Returns Correct Encapsulation String 1`] = `
Object {
  "data": Array [
    101,
    0,
    4,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Encapsulation Test Encapsulation Generator Functions SendRRData Returns Correct Encapsulation String 1`] = `
Object {
  "data": Array [
    111,
    0,
    17,
    0,
    145,
    129,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    10,
    0,
    104,
    101,
    108,
    108,
    111,
    32,
    119,
    111,
    114,
    108,
    100,
  ],
  "type": "Buffer",
}
`;

exports[`Encapsulation Test Encapsulation Generator Functions SendUnitData Returns Correct Encapsulation String 1`] = `
Object {
  "data": Array [
    112,
    0,
    17,
    0,
    145,
    129,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    104,
    101,
    108,
    108,
    111,
    32,
    119,
    111,
    114,
    108,
    100,
  ],
  "type": "Buffer",
}
`;

exports[`Encapsulation Test Encapsulation Generator Functions Unregister Session Returns Correct Encapsulation String 1`] = `
Object {
  "data": Array [
    102,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;
